# wikier

./: pyproject.toml
.github/workflows/: test.yaml
tests/: test_console.py
wikier/: console.py
