[project]
name = "wikier"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]
requires-python = ">= 3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
wikier = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
click = ">=8.1.7,<8.2"
requests = ">=2.32.1,<2.33"

[tool.pixi.feature.build.dependencies]
build = ">=0.7.0,<0.8"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.environments]
# implicit: default = ["default"] Here default encironment has default task
default = { solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
# test = ['test'] # default + test
py310 = { features = ['py310'], solve-group = "py310" }
py310build = { features = ['py310', 'build'], solve-group = "py310" }
py311 = { features = ['py311'], solve-group = "py311" }
py311build = { features = ['py311', 'build'], solve-group = "py311" }
